--- a/6-collections/6-timetable/index.html
+++ b/6-collections/6-timetable/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./style.css"/>
     <title>Horario escolar</title>
 </head>
   <body>
@@ -11,12 +12,8 @@
       <caption>Horario escolar 1º "B" de Primaria - marzo 2019</caption>
       <thead>
         <tr>
-          <th>HORA</th>
-          <th></th>
-          <th></th>
-          <th>Dias  de la semana</th>
-          <th></th>
-          <th></th>
+          <th rowspan="2">HORA</th>
+          <th class="r" colspan="5">Dias  de la semana</th>
         </tr>
       </thead>
       <tbody>
@@ -30,11 +27,7 @@
         </tr>
         <tr>
           <td>7:25 - 7:35 A.M</td>
-          <th></th>
-          <th></th>
-          <th>Actividades permanentes</th>
-          <th></th>
-          <th></th>
+          <th class="r" colspan="5">Actividades permanentes</th>
         </tr>
         <tr>
           <td>7:35 - 8:10 A.M</td>
@@ -55,7 +48,7 @@
           <tr>
             <td>8:45 - 9:20 A.M</td>
             <td>Razonamiento verbal</td>
-            <td>educación fisica</td>
+            <td>Educación fisica</td>
             <td>Matemática</td>
             <td>Comunicación</td>
             <td>Razonamiento matemático</td>
@@ -70,11 +63,7 @@
           </tr>
           <tr>
             <td>9:55 - 10:30 A.M</td>
-            <td></td>
-            <td></td>
-            <th>Recreo</th>
-            <td></td>
-            <td></td>
+            <th class="r" colspan="5">Recreo</th>
           </tr>
           <tr>
             <td>10:30 - 10:50 A.M</td>
