--- a/3-texts/3-curriculum/index.html
+++ b/3-texts/3-curriculum/index.html
@@ -3,34 +3,30 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./style.css"/>
+    <link rel="stylesheet" type="text/css" href="./style.css" />
     <title>Curriculum Vitae</title>
 </head>
 
 <body>
-    <header>
-        <h1>Curriculum Vitae</h1>
-    </header>
+    <h1>Curriculum Vitae</h1>
     <div>
-      <div class="personal">
-         <ul>
-            <li><b>Nombre:</b>Michelle Torres Quiroz</li>
-            <li><b>Edad:</b>25 años</li>
-            <li><b>Domicilio:</b>Av Siemprevia No.17 Col.Anzures, Mexico D.F. 04565</li>
-            <li><b>Tel:</b>55-34-45-95</li>
-            <li><b>Email:</b>curriculum@gmail.com</li>
-         </ul>
-      </div>
-          <img src="Michell.png" />
+        <div class="personal">
+            <ul>
+                <li><b>Nombre:</b>Michelle Torres Quiroz</li>
+                <li><b>Edad:</b>25 años</li>
+                <li><b>Domicilio:</b>Av Siemprevia No.17 Col.Anzures, Mexico D.F. 04565</li>
+                <li><b>Tel:</b>55-34-45-95</li>
+                <li><b>Email:</b>curriculum@gmail.com</li>
+            </ul>
+        </div>
+        <img src="Michell.png" />
     </div>
-    <div class="perfil">
-        <p><b>Perfil:</b> Tengo un carácter de mujer emprendedora, porque en los negocios o actividades laborales, 
-            suelo ser muy dinamica, responsable,puntual, puedo llevar la responsabilidad de un equipo 
+    <div class="parragraphs">
+        <p><b>Perfil:</b> Tengo un carácter de mujer emprendedora, porque en los negocios o actividades laborales,
+            suelo ser muy dinamica, responsable,puntual, puedo llevar la responsabilidad de un equipo
             de personas, visionaria, y sobre todo motivadora, etc.</p>
     </div>
-    <div class="a">
+    <div class="parragraphs">
         <h3>Estudios Academicos</h3>
         <ul>
             <li>Universidad Autonoma de México. Facultad de Ciencias de la Comunicación</li>
@@ -39,7 +35,7 @@
             <li>Licenciatura en Derecho. Generación 1996 - 2000</li>
         </ul>
     </div>
-    <div class="a">
+    <div class="parragraphs">
         <h3>Actividades laborales</h3>
         <ul>
             <li>Asesor Juridica para Revista México. Año 2000 - 2011</li>
@@ -48,7 +44,7 @@
             <li>Redactora de Articulos para website. Año 2005 - 2011. España, Estados Unidos, México</li>
         </ul>
     </div>
-    <div class="a">
+    <div class="parragraphs">
         <h3>Habilidades y conocimientos:</h3>
         <ul>
             <li>Administrativas y contable, curso realizado online, Constancia de la SEC. Año 2008</li>
